# mysdl

./: CMakeLists.txt  Makefile
src/: main.cpp
src/CApp/: CApp.cpp  CApp.h  SimpleSprite.cpp  SimpleSprite.h  SimpleSpriteRender.cpp  SimpleSpriteRender.h
src/displays/: IRenderable.h
src/events/: Event.h  EventsController.cpp  EventsController.h  IEventsControllerModel.h  SDLEventsControllerModel.cpp  SDLEventsControllerModel.h
src/render/: Cache.cpp  Cache.h  ICanvas.h  ICanvasController.h  IRenderOwner.h  IRenderable.h  renders.h
src/renders/: IRenderModel.cpp  IRenderModel.h  Render.cpp  Render.h  SDLRenderModel.cpp  SDLRenderModel.h
src/scenes/: IDrawable.h  ISceneObject.h  ITickableObject.h  Scene.cpp  Scene.h  SceneObjectsCollection.h  scenes.txt
src/sdl_support/events/: SDLEventsControllerModel.cpp  SDLEventsControllerModel.h
src/sdl_support/render/: SDLCanvas.cpp  SDLCanvas.h  SDLCanvasController.cpp  SDLCanvasController.h
src/sdl_support/time/: SDLTimeModel.cpp  SDLTimeModel.h
src/times/: ITimeModel.h  SDLTimeModel.cpp  SDLTimeModel.h  TimeController.cpp  TimeController.h
src/utils/: Benchmark.cpp  Benchmark.h  Logger.cpp  Logger.h
